RESOLVED FIXED 207628
[GStreamer][EME] Fix build with ENCRYPTED_MEDIA=OFF
https://bugs.webkit.org/show_bug.cgi?id=207628
Summary [GStreamer][EME] Fix build with ENCRYPTED_MEDIA=OFF
Charlie Turner
Reported 2020-02-12 06:08:46 PST
[GStreamer][EME] Fix build with ENCRYPTED_MEDIA=OFF
Attachments
Patch (4.67 KB, patch)
2020-02-12 06:10 PST, Charlie Turner
no flags
Charlie Turner
Comment 1 2020-02-12 06:10:53 PST
Created attachment 390509 [details] Patch Fixes build issues on bots without a defined ENCRYPTED_MEDIA
WebKit Commit Bot
Comment 2 2020-02-12 07:48:38 PST
The commit-queue encountered the following flaky tests while processing attachment 390509 [details]: fetch/fetch-worker-crash.html bug 187257 (author: youennf@gmail.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2020-02-12 07:49:12 PST
Comment on attachment 390509 [details] Patch Clearing flags on attachment: 390509 Committed r256436: <https://trac.webkit.org/changeset/256436>
WebKit Commit Bot
Comment 4 2020-02-12 07:49:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.