[GStreamer][EME] Fix build with ENCRYPTED_MEDIA=OFF https://bugs.webkit.org/show_bug.cgi?id=207628

Unreviewed build fix.

Covered by existing tests.


* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::parseInitDataFromProtectionMessage):
(WebCore::MediaPlayerPrivateGStreamer::waitForCDMAttachment):


Canonical link: https://commits.webkit.org/220595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256436 268f45cc-cd09-0410-ab3c-d52691b4dbfc